# six-servo-arm-robot

./: .gitignore  README.md
src/six_servo_arm_bridge/: CMakeLists.txt  package.xml
src/six_servo_arm_bridge/src/: joint_state_to_arm_cmd.cpp
src/six_servo_arm_control/: CMakeLists.txt  package.xml
src/six_servo_arm_control/launch/: approx_ik_joint_search.launch.py  approx_ik_joint_search_seed.launch.py  approx_ik_joint_search_seed2.launch.py  approx_ik_joint_search_with_direction.launch.py  approx_ik_with_pregrasp_flow.launch.py  approx_ik_with_pregrasp_flow2.launch.py  joint_target.launch.py  kdl_position_only.launch.py  position_ik.launch.py  position_ik2.launch.py  selected_block_mm_to_moveit.launch.py  selected_block_mm_to_moveit_busy.launch.py  selected_block_mm_to_moveit_busy_with_gripper_postgrasp.launch.py  tool0_pose_target.launch.py
src/six_servo_arm_control/src/: approx_ik_joint_search.cpp  approx_ik_joint_search_seed.cpp  approx_ik_joint_search_seed2.cpp  approx_ik_joint_search_with_direction.cpp  approx_ik_with_pregrasp_flow.cpp  approx_ik_with_pregrasp_flow2.cpp  joint_target.cpp  kdl_position_only.cpp  position_ik.cpp  position_ik2.cpp  selected_block_mm_to_moveit.cpp  selected_block_mm_to_moveit_busy.cpp  selected_block_mm_to_moveit_busy_with_gripper_postgrasp.cpp  selected_block_mm_to_moveit_busy_with_gripper_postgrasp2.cpp  selected_block_mm_to_moveit_busy_with_gripper_postgrasp3.cpp  selected_block_mm_to_moveit_busy_with_gripper_postgrasp4.cpp  selected_block_mm_to_moveit_busy_with_gripper_postgrasp5.cpp  selected_block_mm_to_moveit_busy_with_gripper_postgrasp6.cpp  selected_block_mm_to_moveit_busy_with_gripper_postgrasp7.cpp  selected_block_mm_to_moveit_busy_with_gripper_postgrasp8.cpp  tool0_pose_target.cpp
src/six_servo_arm_description/: CMakeLists.txt  README.md  URDF_notes.md  package.xml
src/six_servo_arm_description/launch/: display.launch.py
src/six_servo_arm_description/rviz/: display.rviz
src/six_servo_arm_description/urdf/: six_servo_arm_template.urdf
src/six_servo_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/six_servo_arm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  six_servo_arm.ros2_control.xacro  six_servo_arm.srdf  six_servo_arm.urdf.xacro
src/six_servo_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/six_servo_arm_msgs/: CMakeLists.txt  package.xml
src/six_servo_arm_msgs/msg/: ArmJointCommand.msg
src/six_servo_arm_rl/: package.xml  setup.cfg  setup.py
src/six_servo_arm_rl/models/: ppo_local_servo_metadata.json
src/six_servo_arm_rl/six_servo_arm_rl/: ppo_local_servo_node2.py
src/six_servo_arm_vision/: package.xml  setup.cfg  setup.py
src/six_servo_arm_vision/six_servo_arm_vision/: aruco_gripper_base_error_node.py  aruco_gripper_tracker_node.py  create_plane_mapping.py  detect_camera_ros2_node.py  detect_camera_ros2_node2.py  detect_camera_ros2_node3.py  handeye_aruco_board_detector_node.py  handeye_sample_collector_node.py  solve_eye_to_hand_calibration.py  yolo_aruco_visual_servo_node.py
